# Rosettier_v2

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml  run_rosettier.sh  run_rosettier_windows.bat
.github/workflows/: ci.yml
docs/: analyze_data.md  create_rosetta.md  docker.md  input_formats.md  installation.md  publication_notes.md  quickstart.md  release_process.md  windows_executable.md
docs/screenshots/: README.md  placeholders.md
examples/: 384_OD_Measurements.tsv  384_Rosetta.tsv  96_OD_Measurements.tsv  96_Point_GFP_matrix.tsv  96_Point_OD.tsv  96_Rosetta.tsv  README.md
examples/fixtures/: plate_reader_384_example.txt  rosetta_384_example.tsv
legacy_streamlit_app/: README.md  app.py  requirements.txt
packaging/windows/: launcher.py  rosettier_windows.spec
scripts/: verify_examples.py
src/rosettier/: __init__.py  exceptions.py  export.py  features.py  io.py  layout.py  pipeline.py  plates.py  qc.py  schema.py
src/rosettier_app/: __init__.py  app.py  launcher.py  paths.py
tests/: test_app_helpers.py  test_app_import.py  test_export.py  test_features.py  test_io_timeseries.py  test_launcher.py  test_layout_merge.py  test_pipeline.py  test_pipeline_integration.py  test_plates.py  test_qc.py
